White text on quotes section kept botherng me (scared of readability issues) so I just made it black

--- a/css/styles.css
+++ b/css/styles.css
@@ -513,7 +513,7 @@ input[type="button"].button-primary:focus {
       -moz-box-shadow: 
         inset 2px 6px 10px -5px rgba(0, 0, 0, 0.45), 
         inset 0px -3px 10px -1px rgba(0, 0, 0, 0.45);
-  color: #fff;
+  color: #000;
   font-weight: 500;
 }
 
@@ -558,8 +558,9 @@ input[type="button"].button-primary:focus {
 }
   @media only screen and (max-width: 399px) {
     #quotes-padding {
+      margin-left: -4%;
       padding-bottom: 1.0rem;
-      padding-top: 7.0rem;
+      padding-top: 4.0rem;
     }
   }
 
